--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
       },
       "googleServicesFile": "./GoogleService-Info.plist",
       "config": {
-        "googleMapsApiKey": "${GOOGLE_MAPS_API_KEY}"
+        "googleMapsApiKey": "AIzaSyBFGtJSCt7UhpCUmssgnoQkTFboTL3vIcY"
       }
     },
     "android": {
@@ -42,7 +42,7 @@
       },
       "config": {
         "googleMaps": {
-          "apiKey": "${GOOGLE_MAPS_API_KEY}"
+          "apiKey": "AIzaSyBFGtJSCt7UhpCUmssgnoQkTFboTL3vIcY"
         }
       }
     },
@@ -51,6 +51,9 @@
     },
     "plugins": [
       "expo-localization"
-    ]
+    ],
+    "extra": {
+      "googleMapsApiKey": "AIzaSyBFGtJSCt7UhpCUmssgnoQkTFboTL3vIcY"
+    }
   }
 }
