--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-firebase/app": "^23.0.1",
     "@react-native-firebase/auth": "^23.0.1",
     "@react-navigation/bottom-tabs": "^7.4.6",
@@ -27,6 +27,7 @@
     "expo-secure-store": "^14.2.3",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.1.0",
+    "mongodb": "^6.18.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
