--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "multer": "^1.4.5-lts.1",
+    "tesseract.js": "^5.0.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -34,6 +36,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.3.0",
+    "@types/multer": "^1.4.12",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
