--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -19,19 +19,21 @@
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
-    "expo": "~53.0.20",
+    "expo": "53.0.22",
+    "expo-build-properties": "~0.14.8",
+    "expo-camera": "~16.1.11",
     "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "^14.1.5",
+    "expo-linear-gradient": "~14.1.5",
     "expo-localization": "~16.1.6",
     "expo-location": "~18.1.6",
     "expo-secure-store": "^14.2.3",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.1.0",
-    "mongodb": "^6.18.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
